--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ progress {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 90vh;
     justify-content: center;
     text-align: center;
 
